--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2>Arnie Palmer | BFA Studio Concentration</h2>
          </div>
          <div class="middlecolumn"><p></p>
-             <div id="maincontent"><p><img src="images/artist.jpg" alt=""></p>
+             <div id="maincontent"><p><img src="artist.jpg" alt=""></p>
              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, aperiam dolorem. Dolor adipisci voluptates, doloremque enim repudiandae nam qui consequatur nostrum vero iusto autem minima sint rem praesentium provident vitae.</p>
              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui sapiente cum debitis ipsa nihil vel fugit ex eligendi sequi officiis! Aliquam facilis vel officiis mollitia dolore libero nulla in dolores!</p>
              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore omnis, maxime deserunt ea sapiente laborum. Sequi velit, quaerat quidem ut voluptate fugit, perferendis ipsa nemo odit nobis voluptates, soluta sit!</p>
@@ -47,22 +47,22 @@
              <div id="artwork"><h3>Header 3</h3>
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, necessitatibus error! Natus dicta quaerat quis, beatae perspiciatis iste itaque velit cupiditate illum? Dignissimos modi mollitia beatae facilis nisi nihil provident!</p>
              <div class="gallery">
-                 <img src="images/boardwalk.jpg" alt="">
-                 <p class="caption">title1</p>
+                 <img src="boardwalk.jpg" alt="">
+                 <p class="caption">Boardwalk</p>
              </div>
              <div class="gallery">
-                 <img src="images/games.jpg" alt="">
-                 <p class="caption">title2</p>
+                 <img src="games.jpg" alt="">
+                 <p class="caption">Games</p>
              </div>
              <div class="gallery">
-                 <img src="images/highTide.jpg" alt="">
-                 <p class="caption">title3</p>
+                 <img src="highTide.jpg" alt="">
+                 <p class="caption">High Tide</p>
              </div>
              <div class="gallery">
-                 <img src="images/lastingPiece.jpg" alt="">
-                 <p class="caption">title4</p>
+                 <img src="lastingPiece.jpg" alt="">
+                 <p class="caption">Last Piece</p>
              </div></div>
-             <div id="footer">footer</div>
+             <div id="footer">Done by Reonna and Lorem</div>
                 
          </div>
 
